# mcpservers

./: .gitignore  dry_run_tests.py  mcpportainer.code-workspace
authentikmcp/: README.md  pyproject.toml
authentikmcp/scripts/: setup_keychain.sh
extensions/mcp-servers-installer/: .vscodeignore  README.md  package.json
grafanamcp/: README.md  pyproject.toml
grafanamcp/scripts/: setup_keychain.sh
infra-monitoring/: README.md  deploy-grafana.sh
infra-monitoring/alerting/: README.md
infra-monitoring/portainer/: README.md
infra-monitoring/prometheus/: README.md  prometheus.yml
infra-monitoring/pve-exporter/: README.md  config.yml  docker-compose-service.yml  pve.yml.example
infra-monitoring/snmp/: synology-snmp.yml
infra-monitoring/tests/: README.md  check_pve_metrics.py  run_all_tests.sh
mcpcreations/: REQUIREMENTS.md  create_proxmox_dashboard.py  create_wazuh_alerts.py  create_wazuh_dashboard.py  create_wazuh_datasource.py  fix_proxmox_alerts.py  mcp_http_gateway.py  proxmox_dashboard.json  proxmox_dashboard_v2.json  wazuh_dashboard.json
mcpcreations/deployments/: README.md
mcpcreations/pve_exporter/: docker-compose.yml  prometheus_scrape_job.yml  pve.yml
mcpcreations/tests/: conftest.py  (+4 more)
mcpportainer/: README.md  REQUIREMENTS.md  pyproject.toml
mcpproxmox/: README.md  pyproject.toml
mcpproxmox/scripts/: setup_keychain.sh
mcpproxmox/src/proxmox_mcp/: __init__.py  client.py  config.py  keychain.py  models.py  server.py
mcpproxmox/tests/: test_client.py  test_models.py  test_server.py
mcpsynology/: README.md  pyproject.toml
(+82 files in other folders)
